<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<!-- title -->
	<TextView android:id="@+id/LabelTitle"
		android:text="@string/cmd_set_service_access"
		android:layout_weight="0"
		style="@style/LabelTitle"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:padding="12sp"
		android:layout_weight="1"	
		android:orientation="vertical"
		android:layout_marginBottom="@dimen/labelBottom"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		
		<!-- email address -->
		<TextView android:id="@+id/LabelEmailAddress"
			android:text="@string/labelEmailAddress"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/labelBottom"		
			android:textSize="18sp" android:textColor="#ffffffff"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
		<EditText android:id="@+id/EditEmailAddress"
			android:lines="1" android:maxLines="1" android:singleLine="true"
			android:layout_marginBottom="@dimen/marginBottom"
			android:layout_weight="0"
			android:inputType="textEmailAddress"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<!-- access code -->
		<TextView android:id="@+id/LabelAccessCode"
			android:text="@string/labelAccessCode"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/labelBottom"		
			android:textSize="18sp" android:textColor="#ffffffff"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
		<EditText android:id="@+id/EditAccessCode"
			android:lines="1" android:maxLines="1" android:singleLine="true"
			android:layout_marginBottom="@dimen/marginBottom"
			android:layout_weight="0"
			android:inputType="textPassword"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
						
		<!-- description -->				
		<TextView android:id="@+id/desc1"
			android:text="@string/descServiceAccess1"
			android:paddingLeft="6sp" android:paddingRight="6sp"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/labelBottom"	
			android:textSize="15sp" android:textColor="#ffffffff"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<TextView android:id="@+id/desc2"
			android:text="@string/descServiceAccess2"
			android:paddingLeft="6sp" android:paddingRight="6sp"
			android:layout_weight="0"	
			android:textSize="14sp" android:textColor="#ffbbbbbb"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="5sp" android:paddingLeft="4sp" android:paddingRight="4sp" android:paddingBottom="1sp"
		android:orientation="horizontal"
		android:background="@drawable/bottom_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<Button android:id="@+id/ButtonOK"
			android:text="@string/btnGetServiceAccess"
			android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
		<Button android:id="@+id/ButtonRevert"
			android:text="@string/btnSetServiceAccess"
			android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
	</LinearLayout>	

</LinearLayout>
