<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<!-- title -->
	<TextView android:id="@+id/LabelTitle"
		android:text="@string/title_waypoint_upload"
		android:layout_weight="0"
		style="@style/LabelTitle"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />		

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:padding="12sp"
		android:layout_weight="1"	
		android:orientation="vertical"
		android:layout_marginBottom="@dimen/labelBottom"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<!-- description -->				
		<TextView android:id="@+id/labelWaypointName"
			android:text="..."
			android:paddingLeft="6sp" android:paddingRight="6sp"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/labelBottom"	
			android:textSize="20sp" android:textColor="#ffffffff"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<TextView android:id="@+id/labelWaypointStatus"
			android:text=""
			android:paddingLeft="6sp" android:paddingRight="6sp"
			android:visibility="invisible"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/marginBottom"	
			android:textSize="14sp" android:textColor="#ffbbbbbb"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<TextView android:id="@+id/labelWaypointVisibility"
			android:text="@string/labelWaypointVisibilityText"
			android:paddingLeft="6sp" android:paddingRight="6sp"
			android:layout_weight="0"	
			android:layout_marginBottom="@dimen/labelBottom"	
			android:textSize="18sp" android:textColor="#ffffffff"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/chkWaypointPublic"
			android:text="@string/labelWaypointPublicText"
			android:layout_marginLeft="6sp"	
			android:layout_width="fill_parent" android:layout_height="wrap_content"/>
		
		<TextView android:id="@+id/labelPublicDesc"
			android:text="@string/labelWaypointPublicDesc"
			android:visibility="gone"				
			android:layout_marginLeft="44sp" android:layout_marginBottom="@dimen/labelBottom"	
			android:textSize="14sp" android:textColor="#ffbbbbbb"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="5sp" android:paddingLeft="4sp" android:paddingRight="4sp" android:paddingBottom="1sp"
		android:orientation="horizontal"
		android:background="@drawable/bottom_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<Button android:id="@+id/ButtonOK"
			android:text="@string/labelUpload"
			android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
		<Button android:id="@+id/ButtonRevert"
			android:text="@string/labelRevert"
			android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
	</LinearLayout>	

</LinearLayout>
